--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@
 
 body {
     margin: 0;
-    background-color: #2D5F73;
+    background-color: #202532;
 
 }
 
@@ -10,23 +10,199 @@ h1 {
     color: #F2F2F2;
 }
 
+h2 {
+    color: #F2F2F2;
+    font-size: 1.5em;
+}
+
 h3 {
     color: #F2F2F2;
     cursor: pointer;
 }
 
-a:hover {
-    color: #2D5F73;
-
+p {
+    color: #F2F2F2;
+    margin-top: -17px;
+    font-size: 1.1em;
 }
+
 
 .footer {
     color: #F2F2F2;
-    background-color: #5997A5;
+    background-color: #2D5F73;
     font-size: 0.8em;
 }
 
 /*--------------GENERAL SETTINGS SLUT---------------*/
+
+/*--------------BACKGROUND COLOR START---------------*/
+
+#testsyoutube,
+.testsvideoer {
+    flex-grow: 1;
+    flex-basis: 350px;
+    font-size: 1.2em;
+    padding: 20px 0px;
+    background-color: seagreen;
+    text-align: center;
+    width: 100%;
+}
+
+#keapp_test_1,
+.tests_keapp {
+    flex-grow: 1;
+    flex-basis: 350px;
+    font-size: 1.2em;
+    padding: 20px 0px;
+    background-color: salmon;
+    text-align: center;
+    width: 100%;
+}
+
+#kea_skema_test_2,
+.tests_keaskema {
+    flex-grow: 1;
+    flex-basis: 350px;
+    font-size: 1.2em;
+    padding: 20px 0px;
+    background-color: saddlebrown;
+    text-align: center;
+    width: 100%;
+}
+
+#kea_social_life_test_3,
+.tests_keasociallife {
+    flex-grow: 1;
+    flex-basis: 350px;
+    font-size: 1.2em;
+    padding: 20px 0px;
+    background-color: steelblue;
+    text-align: center;
+    width: 100%;
+}
+
+#benchmark,
+.tests_benchmark,
+.valgide {
+    flex-grow: 1;
+    flex-basis: 350px;
+    font-size: 1.2em;
+    padding: 20px 0px;
+    text-align: center;
+    width: 100%;
+}
+
+
+
+
+/*--------------BACKGROUND COLOR SLUT---------------*/
+
+/*--------------DROPDOWN MENU START---------------*/
+
+a {
+    text-decoration: none;
+    color: #2D5F73;
+    transition: color 0.3s ease;
+}
+
+a:hover {
+    color: #F2F2F2;
+}
+
+#menuToggle {
+    display: block;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    z-index: 1;
+}
+
+#menuToggle input {
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
+    cursor: pointer;
+    opacity: 0;
+    /* hide this */
+    z-index: 2;
+    /* and place it over the hamburger */
+    -webkit-touch-callout: none;
+}
+
+#menuToggle span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+
+    background: #000;
+    border-radius: 3px;
+
+    z-index: 1;
+
+    transform-origin: 4px 0px;
+}
+
+#menuToggle span:first-child {
+    transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2) {
+    transform-origin: 0% 100%;
+}
+
+#menuToggle input:checked ~ span {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #232323;
+}
+
+#menuToggle input:checked ~ span:nth-last-child(3) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+#menuToggle input:checked ~ span:nth-last-child(2) {
+    transform: rotate(-45deg) translate(0, -1px);
+}
+
+#menu {
+    box-shadow: 8px 0px 20px 0px rgba(0, 0, 0, 0.75);
+    position: absolute;
+    width: 250px;
+    height: inherit;
+    margin: -100px 0 0 -50px;
+    padding: 50px;
+    padding-top: 125px;
+
+    background: #C73538;
+    list-style-type: none;
+    -webkit-font-smoothing: antialiased;
+    /* to stop flickering of text in safari */
+    transform-origin: 0% 0%;
+    transform: translate(-100%, 0);
+
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+}
+
+#menu li {
+    padding: 5px 0;
+    font-size: 22px;
+}
+
+#menuToggle input:checked ~ ul {
+    transform: none;
+}
+
+li {
+    list-style-type: none;
+}
+
+/*--------------DROPDOWN MENU START---------------*/
 
 /*--------------OVERSKRIFT START---------------*/
 
@@ -36,6 +212,32 @@ a:hover {
 }
 
 /*--------------OVERSKRIFT SLUT---------------*/
+
+/*--------------PERSONA START---------------*/
+
+#persona img {
+    width: 20.425vw;
+    height: 25vw;
+    margin-bottom: 40px;
+    border-radius: 10px;
+}
+
+
+/*--------------PERSONA SLUT---------------*/
+
+/*--------------EXPERIENCE MAP START---------------*/
+
+#experience_map h3 {
+    color: #F2F2F2;
+    font-size: 1.1em;
+}
+
+#experience_map img {
+    width: 50vw;
+    height: 28.125vw;
+}
+
+/*--------------EXPERIENCE MAP SLUT---------------*/
 
 /*--------------LINKS START---------------*/
 
@@ -48,13 +250,16 @@ a:hover {
 
 .daily_scrum,
 .burndownchart,
-.trello {
+.trello,
+.praesentations_site,
+.tests,
+.gruppekontrakt {
     flex-grow: 1;
     flex-basis: 350px;
     font-size: 1.2em;
     padding: 20px 0px;
     color: #F2F2F2;
-    background-color: #5997A5;
+    background-color: #202532;
     text-align: center;
     width: 100%;
 }
@@ -77,7 +282,7 @@ a:hover {
     font-size: 1em;
     padding: 20px 0px;
     color: #FFF;
-    background-color: #5997A5;
+    background-color: #2D5F73;
 }
 
 /*--------------GRUPPENAVNE SLUT---------------*/
