--- a/stylesheet.css
+++ b/stylesheet.css
@@ -340,3 +340,51 @@ li {
 }
 
 /*--------------GRUPPENAVNE SLUT---------------*/
+
+
+/*-------------PRÆSENTATIONSSITE CSS------------*/
+
+/*fonte*/
+#content {
+    font-family: 'Lato', sans-serif;
+}
+
+
+#content a {
+    text-decoration: none;
+    color: #ffffff;
+    padding: 0;
+}
+
+#content a:hover {
+    color: #ffffff;
+}
+
+
+#content p {
+    color: #ffffff;
+    margin: 0;
+    font-family: 'Open Sans', sans-serif;
+}
+
+#content h1 {
+    color: #ffffff;
+    padding: 0;
+    font-size: 3em;
+    font-family: 'Roboto', sans-serif;
+}
+
+#content h2 {
+    color: #ffffff;
+}
+
+#content h3 {
+    color: #ffffff;
+}
+
+#content ul {
+    color: #ffffff;
+}
+
+
+
