less opacity in the background

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -433,7 +433,7 @@ li {
 /*___________Fordele_benefits_________*/
 
 #fordele_benefits {
-    background-color: #E99161;
+/*    background-color: #E99161;*/
     padding: 30px;
     border-radius: 20px;
     margin: 5vw;
