--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,98 +8,41 @@ body {
 }
 
 h1 {
-    color: #F2F2F2;
+    color: #cb7a4e;
     padding: 15px;
 }
 
 h2 {
-    color: #9b9898;
+    color: #535252;
     font-size: 1.5em;
 }
 
 h3 {
-    color: #F2F2F2;
+    color: #cb7a4e;
     cursor: pointer;
 }
 
 p {
-    color: #F2F2F2;
-    margin-top: -17px;
+    color: #535252;
+    /*    margin-top: -17px;*/
     font-size: 1.1em;
 }
 
 
 .footer {
-    color: #F2F2F2;
-    background-color: #2D5F73;
+    color: #313131;
+    background-color: #cb7a4e;
     font-size: 0.8em;
 }
 
 /*--------------GENERAL SETTINGS SLUT---------------*/
 
-/*--------------BACKGROUND COLOR START---------------*/
-
-#testsyoutube {
-    /*
-    flex-grow: 1;
-    flex-basis: 350px;
 */
-    font-size: 1.2em;
-    padding: 20px 0px;
-    background-color: #d3a44e;
-    border-radius: 20px;
-    text-align: center;
-    margin: 5vw;
-}
-
-#keapp_test_1 {
-    font-size: 1.2em;
-    padding: 20px 0px;
-    background-color: #c38d2b;
-    border-radius: 20px;
-    text-align: center;
-    margin: 5vw;
-}
-
-#kea_skema_test_2 {
-    font-size: 1.2em;
-    padding: 20px 0px;
-    background-color: #b1760d;
-    border-radius: 20px;
-    text-align: center;
-    margin: 5vw;
-}
-
-#kea_social_life_test_3 {
-    font-size: 1.2em;
-    padding: 20px 0px;
-    background-color: #935f02;
-    border-radius: 20px;
-    text-align: center;
-    margin: 5vw;
-}
-
-
-#benchmark {
-    font-size: 1.2em;
-    padding: 20px 0px;
-    text-align: center;
-    background-color: #935f02;
-    border-radius: 20px;
-    margin: 5vw;
-
-}
-
-
-
-
-/*--------------BACKGROUND COLOR SLUT---------------*/
-
 /*--------------DROPDOWN MENU START---------------*/
 
 a {
     text-decoration: none;
-    color: #2D5F73;
+    color: #cb7a4e;
     transition: color 0.3s ease;
 }
 
@@ -137,7 +80,7 @@ a:hover {
     margin-bottom: 5px;
     position: relative;
 
-    background: #e0bb78;
+    background: #cb7a4e;
     border-radius: 3px;
 
     z-index: 1;
@@ -156,7 +99,7 @@ a:hover {
 #menuToggle input:checked ~ span {
     opacity: 1;
     transform: rotate(45deg) translate(-2px, -1px);
-    background: #232323;
+    background: #cb7a4e;
 }
 
 #menuToggle input:checked ~ span:nth-last-child(3) {
@@ -177,7 +120,7 @@ a:hover {
     padding: 50px;
     padding-top: 125px;
 
-    background: rgb(242, 197, 52);
+    background: #55585d;
     list-style-type: none;
     -webkit-font-smoothing: antialiased;
     /* to stop flickering of text in safari */
@@ -211,6 +154,52 @@ li {
 
 /*--------------OVERSKRIFT SLUT---------------*/
 
+/*--------------EXPERIENCE MAP START---------------*/
+
+#experience_map {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #55585d;
+    border-radius: 20px;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 5vw;
+}
+
+.column1,
+.column2,
+.column3 {
+    flex-grow: 1;
+    flex-basis: 350px;
+    font-size: 1.2em;
+    padding: 20px 0px;
+    background-color: #ffd5c3;
+    border-radius: 40px;
+    text-align: center;
+    margin: 2vw;
+    flex-grow: 1;
+    flex-basis: 350px;
+    font-size: 1.2em;
+    padding: 20px 0px;
+    background-color: #f1baa8;
+    border-radius: 40px;
+    text-align: center;
+    margin: 2vw;
+}
+
+#experience_map h3 {
+    color: #F2F2F2;
+    font-size: 1.1em;
+}
+
+#experience_map img {
+    width: 50vw;
+    height: 28.125vw;
+}
+
+/*--------------EXPERIENCE MAP SLUT---------------*/
+
 /*--------------PERSONA START---------------*/
 
 #persona .sectionwrapper {
@@ -218,12 +207,10 @@ li {
     flex-wrap: wrap;
     margin: 5vw;
     padding: 10px;
-    background-color: #e0bb78;
+    background-color: #ffd5c3;
     border-radius: 20px;
 
 }
-
-
 
 #persona .img {
     width: 20.425vw;
@@ -240,70 +227,82 @@ li {
     flex-grow: 2;
     padding: 15px;
 
-
-
-
 }
-
 
 /*--------------PERSONA SLUT---------------*/
 
-/*--------------EXPERIENCE MAP START---------------*/
+/*--------------TEST START---------------*/
 
-#experience_map h3 {
-    color: #F2F2F2;
-    font-size: 1.1em;
+#sectionwrapper_test {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #55585d;
+    border-radius: 30px;
+    margin: 5vw;
+
 }
 
-#experience_map img {
-    width: 50vw;
-    height: 28.125vw;
-}
-
-#Storyboard {
+.testsyoutube,
+.keapp_test_1,
+.kea_skema_test_2,
+.kea_social_life_test_3 {
     flex-grow: 1;
     flex-basis: 350px;
     font-size: 1.2em;
     padding: 20px 0px;
+    background-color: #f1baa8;
+    border-radius: 40px;
+    text-align: center;
+    margin: 2vw;
+}
+
+
+/*--------------TEST SLUT---------------
+
+
+/*--------------VALGIDE START---------------*/
+
+#valgide {
+    font-size: 1.2em;
+    padding: 20px 0px;
     color: #F2F2F2;
-    /*    background-color: #202532;*/
-    background-color: #e0bb78;
+    background-color: #ffd5c3;
     border-radius: 20px;
     text-align: center;
-    width: 100%;
-}
-
-#Storyboard img {
-    width: 50vw;
-    height: 28.125vw;
-    flex-grow: 2;
-    flex-basis: 350px;
-}
-
-#experience_map .sectionwrapper {
-    background-color: #f0d299;
-    border-radius: 20px;
-    padding: 20px;
-    display: flex;
-    flex-wrap: wrap;
     margin: 5vw;
 }
 
-/*--------------EXPERIENCE MAP SLUT---------------*/
+.Storyboard img {
+    width: 50vw;
+    height: 28.125vw;
+}
+
+/*--------------VALGIDE SLUT---------------*/
+
+/*--------------Design Proces---------------*/
+
+#styltile {
+    font-size: 1.2em;
+    padding: 20px 0px;
+    color: #F2F2F2;
+    background-color: #ffd5c3;
+    border-radius: 20px;
+    text-align: center;
+    margin: 5vw;
+}
+
 
 /*--------------LINKS START---------------*/
 
 #sectionwrapper_links {
     display: flex;
     flex-wrap: wrap;
-    width: auto;
-    height: auto;
-    background-color: #e0bb78;
-    border-radius: 20px;
+    background-color: #55585d;
+    border-radius: 30px;
+    margin: 5vw;
 }
 
 .daily_scrum,
-.burndownchart,
 .trello,
 .praesentations_site,
 .tests,
@@ -313,12 +312,30 @@ li {
     font-size: 1.2em;
     padding: 20px 0px;
     color: #F2F2F2;
-    background-color: #202532;
+    background-color: #ffd5c3;
     text-align: center;
-    width: 100%;
+    border-radius: 30px;
+    margin: 2vw;
 }
 
 /*--------------LINKS SLUT---------------*/
+
+/*--------------burndownchart ---------------*/
+
+#burndownchart {
+    padding: 20px 0px;
+    color: #F2F2F2;
+    background-color: #ffd5c3;
+    border-radius: 20px;
+    text-align: center;
+    margin: 5vw;
+
+}
+
+.burndownchart img {
+    width: 50vw;
+    height: 45vw;
+}
 
 /*--------------GRUPPENAVNE START---------------*/
 
@@ -381,7 +398,7 @@ li {
 }
 
 #content ul {
-    color: #fff8ee;
+    color: #535252;
 }
 
 
@@ -416,11 +433,11 @@ li {
 
 }
 
-#app_link img{
+#app_link img {
     width: 100px;
 }
 
-#app_link img:hover{
+#app_link img:hover {
     transform: scale(1.1);
 }
 
@@ -441,7 +458,7 @@ li {
 /*___________Fordele_benefits_________*/
 
 #fordele_benefits {
-/*    background-color: #E99161;*/
+    /*    background-color: #E99161;*/
     padding: 30px;
     border-radius: 20px;
     margin: 5vw;
