--- a/stylesheet.css
+++ b/stylesheet.css
@@ -285,7 +285,7 @@ li {
     font-size: 1.2em;
     padding: 20px 0px;
     color: #F2F2F2;
-    background-color: #ffd5c3;
+    background-color: #f1baa8;
     border-radius: 20px;
     text-align: center;
     margin: 5vw;
@@ -325,7 +325,7 @@ li {
 #burndownchart {
     padding: 20px 0px;
     color: #F2F2F2;
-    background-color: #ffd5c3;
+    background-color: #f1baa8;
     border-radius: 20px;
     text-align: center;
     margin: 5vw;
