--- a/stylesheet.css
+++ b/stylesheet.css
@@ -170,9 +170,9 @@ li {
     margin: 5vw;
 }
 
-.column1,
-.column2,
-.column3 {
+#column1,
+#column2,
+#column3 {
     flex-grow: 1;
     flex-basis: 350px;
     font-size: 1.2em;
